--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,40 @@
 aiohttp==3.9.5
+aiosignal==1.4.0
+annotated-types==0.7.0
+attrs==25.4.0
+cachetools==6.2.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+discord==2.3.2
 discord.py==2.4.0
+frozenlist==1.8.0
+google-ai-generativelanguage==0.6.6
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
 google-generativeai==0.7.2
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.62.3
+httplib2==0.31.0
+idna==3.11
+multidict==6.7.0
+pillow==12.0.0
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==4.25.8
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyparsing==3.2.5
+reportlab==4.4.5
+requests==2.32.5
+rsa==4.9.1
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+yarl==1.22.0
