--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "ai_provider": "gemini", 
+  "ai_provider": "groq", 
   "ai_model": "gemini-2.0-flash-exp",
   "groq_model": "llama3-70b-8192",
   "comment": "ai_provider는 'gemini' 또는 'groq' 중 선택 가능합니다."
