--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "ai_provider": "gemini", 
+  "ai_provider": "groq", 
   "ai_model": "gemini-2.0-flash-exp",
   "groq_model": "llama-3.3-70b-versatile",
   "bot_repo": "mini2317/PM-bot" 
